<resources>
    <string name="app_name">testChatApp</string>
    <string name="signIn">Sign In</string>
    <string name="hint_email_box">Email Address</string>
    <string name="hint_password_box">Password</string>
    <string name="forgetPass">Forget Your Password</string>
    <string name="rememberMe">Remember Me</string>
    <string name="dont_have">Don"'"t have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="createe_account">Create your \n Account</string>
    <string name="hint_name_box">Name</string>
    <string name="dont_forget_password">Don"'"t forget your password</string>
    <string name="sign_up_bar">Sign up</string>
    <string name="chats">Chats</string>
    <string name="chat2">Chat</string>

    <string name="hint_search_box">Search</string>
    <string name="btn_menu"> right menu</string>
    <string name="back_btn">left back  for chat messenger</string>
    <string name="pic_chat">picture chat of sender</string>
    <string name="btn_send_content">send msg btn</string>
    <string name="hint_msg_box">Type a  Message</string>
    <string name="defualt_name">Defualt name</string>
    <string name="last_msg">Last Masseage</string>
    <string name="user_name">Moamn Programmer</string>
    <string name="add_friend_msg">add friend to chat</string>
    <string name="msg_recived">message reciver</string>
    <string name="msg_time">12:33 pm</string>
    <string name="sender_text">Sended message</string>
    <string name="msg_time_sender">09:33 am</string>
    <string name="my_profile">My profile</string>
    <string name="setting">setting</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="logOut">log out</string>
    <string name="last_message">last message</string>
    <string name="moamn_ali">moamn ali</string>
    <string name="add_fab_content_description">add image profile</string>
    <string name="have_you">Have a favorite selfie? Upload it now</string>
    <string name="pick">pick a profile picture</string>
    <string name="next">next</string>
    <string name="skip"><u>Skip for now</u>.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_voice">2:00</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="email">Your Email</string>
    <string name="password">Your Password</string>
    <string name="phone_number">Your Phone Number</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="delete">deletle</string>
    <string name="play">play</string>


</resources>