<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".featuer_chat.presentation.activites.profile_activity.ProfileActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        >
        <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:clickable="true"

            android:focusable="true"
            />
        <TextView
            android:id="@+id/edit_profile_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            app:layout_constraintStart_toStartOf="@id/cancel_tv"
            app:layout_constraintEnd_toEndOf="@id/save_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/save_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/progress_bar_log"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:theme="@style/Theme.TestChatApp.WhiteAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_ly_profile"
        />
    <RelativeLayout
        android:id="@+id/img_ly_profile"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        android:layout_marginTop="15dp"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shap_image_view"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@color/grayTextColor"
            android:src="@drawable/pesrson_shap"
            app:shapeAppearanceOverlay="@style/circle" />
        <RelativeLayout
            android:id="@+id/fab_ly"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="-20dp"
            android:background="@drawable/add_fab_shap_ly"
            android:gravity="center">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_image_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/add_fab_content_description"
                android:src="@drawable/add_chats_friend_icon"
                app:fab_colorNormal="@color/signTextColor"
                app:fab_size="mini" />
        </RelativeLayout>




    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ly_info"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_ly_profile"
        app:layout_constraintVertical_bias="0.058">

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
        <TextView
            android:id="@+id/password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/password"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/phone_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/phone_number_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/city_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/city"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/city_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/country_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/country"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/country_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>