<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        tools:ignore="ContentDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:context=".pages.UsersChatListActivity">

        <LinearLayout
            android:id="@+id/top_bar_chat_list"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white_lighter"
            android:layoutDirection="ltr"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:id="@+id/group_chat_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                >

                <ImageView
                    android:id="@+id/image_chat_user"
                    android:layout_width="50dp"
                    android:layout_height="50dp"

                    android:layout_gravity="start"
                    android:src="@drawable/google_green" />

                <TextView

                    android:id="@+id/chats_text"
                    android:layout_width="111dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="5dp"
                    android:maxLines="1"
                    android:text="@string/chats"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:layout_gravity="start" />


            </LinearLayout>

            <FrameLayout
                android:id="@+id/add_btn_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/btn_add_friend"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/add_friend_button_style"
                    android:contentDescription="@string/chat2"
                    android:src="@drawable/add_chats_friend"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"

                    />
            </FrameLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/search_textBox"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_below="@id/top_bar_chat_list"
            android:hint="@string/hint_search_box"
            android:inputType="text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:paddingStart="20sp"
            android:paddingEnd="20dp"
            android:background="@drawable/text_box_shap_bg"
            android:autofillHints="password" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/users_chat_list_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/search_textBox"
            android:layout_marginStart="10dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp" />
    </RelativeLayout>
</layout>